--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzAWAo+nOeLWFY3QcKfsY3",
+      "authorship_tag": "ABX9TyN4Oi9Zu1N48VXUdn7AtbUr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "sNtydHYmFjVY",
         "outputId": "740f274b-fa92-44cd-c000-795af79566b1",
@@ -60,6 +60,13 @@
         }
       ],
       "source": [
+        "# https://webscraping.fyi/lib/language/python/ | Python - Web Scraping FYI\n",
+        "# https://webscraping.fyi/lib/python/scrapy/ | Python scrapy Library in Web Scraping - Web Scraping FYI\n",
+        "# https://www.python-httpx.org/ | HTTPX\n",
+        "# https://pypi.org/project/httpx/ | httpx · PyPI\n",
+        "# https://scrapy.org/ | Scrapy | A Fast and Powerful Scraping and Web Crawling Framework\n",
+        "# https://medium.com/@shahriar.atik/a-detailed-guide-on-httpx-9fec63536be5 | A Detailed Guide on httpx. httpx is a fast web application… | by Md Shahriar Atik Shifat | Medium\n",
+        "\n",
         "import requests, json\n",
         "from pprint import pprint\n",
         "DKEY = \"0df993c66c0c636e29ecbb5344252a4a 0b2bdeda43b5688921839c8ecb20399b\"\n",
