--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4Oi9Zu1N48VXUdn7AtbUr",
+      "authorship_tag": "ABX9TyNyCHMNJWw+qvLPSje0ZCLW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,19 +66,18 @@
         "# https://pypi.org/project/httpx/ | httpx · PyPI\n",
         "# https://scrapy.org/ | Scrapy | A Fast and Powerful Scraping and Web Crawling Framework\n",
         "# https://medium.com/@shahriar.atik/a-detailed-guide-on-httpx-9fec63536be5 | A Detailed Guide on httpx. httpx is a fast web application… | by Md Shahriar Atik Shifat | Medium\n",
+        "# https://realpython.com/python-web-scraping-practical-introduction/\n",
+        "# https://www.geeksforgeeks.org/python-web-scraping-tutorial/\n",
         "\n",
-        "import requests, json\n",
+        "# https://thepythoncode.com/article/translate-text-in-python\n",
+        "# https://pypi.org/project/deep-translator/\n",
+        "# https://lokalise.com/blog/how-to-translate-languages-in-python-with-google-translate-and-deepl-plus-more/\n",
+        "\n",
+        "import httpx, scrapy, asyncio, aiohttp\n",
         "from pprint import pprint\n",
-        "DKEY = \"0df993c66c0c636e29ecbb5344252a4a 0b2bdeda43b5688921839c8ecb20399b\"\n",
-        "LTKEY = '6a5e4582f90365efe0d1cf81d1df8e0a'\n",
-        "def get_doubandata():\n",
-        "    url = f'https://www.douban.com/service/auth2/auth?client_id={KEY}'\n",
-        "    response = requests.get(url)\n",
-        "    if response.status_code == 200:\n",
-        "        data = response.json()\n",
-        "        pprint(data)\n",
         "\n",
         "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
+        "#https://www.librarything.com/tag/sociology\n",
         "\n"
       ]
     }
