--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyCHMNJWw+qvLPSje0ZCLW",
+      "authorship_tag": "ABX9TyMkr1j1PHg3pMvJhTdGA1fP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,14 @@
         }
       ],
       "source": [
+        "\"\"\"\n",
+        "-To a general degree, How different is the sociological knowledge of western readers different from Chinese readers?\n",
+        "  -Knowing what subjects in sociology are western and chinese readership are most interested in, what differences are there between their ranked interests?\n",
+        "  -How do the ratings for the same popular sociological work by western and chinese readers compare?\n",
+        "  -To what degree are the most popular sociological books in china are available in the west's (and vice versa)?\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
         "# https://webscraping.fyi/lib/language/python/ | Python - Web Scraping FYI\n",
         "# https://webscraping.fyi/lib/python/scrapy/ | Python scrapy Library in Web Scraping - Web Scraping FYI\n",
         "# https://www.python-httpx.org/ | HTTPX\n",
@@ -78,7 +86,24 @@
         "\n",
         "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
         "#https://www.librarything.com/tag/sociology\n",
-        "\n"
+        "\n",
+        "\"\"\"\n",
+        "douban:\n",
+        "\n",
+        "  1. go through each entry top to bottom\n",
+        "  2. click to next page\n",
+        "  3. repeat until page with no results\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "libarything:\n",
+        "\n",
+        "  1. Click on entry from top left to right bottom\n",
+        "  2. click next\n",
+        "  3. repeat until no entry to click on\n",
+        "\n",
+        "\"\"\""
       ]
     }
   ]
