--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkr1j1PHg3pMvJhTdGA1fP",
+      "authorship_tag": "ABX9TyN07+xCWXIAl3g8T3l6KWXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "\"\"\"\n",
         "-To a general degree, How different is the sociological knowledge of western readers different from Chinese readers?\n",
         "  -Knowing what subjects in sociology are western and chinese readership are most interested in, what differences are there between their ranked interests?\n",
-        "  -How do the ratings for the same popular sociological work by western and chinese readers compare?\n",
+        "  -How are the ratings by western and chinese readers for the same popular sociological works of the west and of china compare?\n",
         "  -To what degree are the most popular sociological books in china are available in the west's (and vice versa)?\n",
         "\"\"\"\n",
         "\n",
