--- a/douban.ipynb
+++ b/douban.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN07+xCWXIAl3g8T3l6KWXp",
+      "authorship_tag": "ABX9TyMCGSMb+KmkqDHNBi2mb9qU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,9 +62,9 @@
       "source": [
         "\"\"\"\n",
         "-To a general degree, How different is the sociological knowledge of western readers different from Chinese readers?\n",
-        "  -Knowing what subjects in sociology are western and chinese readership are most interested in, what differences are there between their ranked interests?\n",
+        "  -Knowing what subjects in sociology western and chinese readership are most interested in, what differences are there between their most common interests?\n",
         "  -How are the ratings by western and chinese readers for the same popular sociological works of the west and of china compare?\n",
-        "  -To what degree are the most popular sociological books in china are available in the west's (and vice versa)?\n",
+        "  (-To what degree are the most popular sociological books in china are available in the west (and vice versa)?)\n",
         "\"\"\"\n",
         "\n",
         "\n",
@@ -86,24 +86,54 @@
         "\n",
         "#https://book.douban.com/tag/%E7%A4%BE%E4%BC%9A%E5%AD%A6\n",
         "#https://www.librarything.com/tag/sociology\n",
+        "#https://www.goodreads.com/\n",
+        "\n",
+        "\"\"\"\n",
+        "For both sites: for each book in the sociology category, sorted by most to least popular:\n",
+        "\n",
+        "1. grab the number of ratings (indicating interest)\n",
+        "2. grab rating score (indicating popularity)\n",
+        "\"\"\"\n",
+        "\n",
         "\n",
         "\"\"\"\n",
         "douban:\n",
         "\n",
         "  1. go through each entry top to bottom\n",
+        "    1. grab data\n",
         "  2. click to next page\n",
         "  3. repeat until page with no results\n",
         "\"\"\"\n",
         "\n",
         "\n",
         "\"\"\"\n",
-        "libarything:\n",
+        "libarything to goodreads:\n",
         "\n",
         "  1. Click on entry from top left to right bottom\n",
+        "    1. grab goodread equivalent entry of librarything entry\n",
+        "    2. grab data\n",
         "  2. click next\n",
         "  3. repeat until no entry to click on\n",
         "\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "\n",
+        "\"\"\"\n",
+        "douban/goodreads book descriptions:\n",
+        "find keywords that fall within a subject (e.g. \"marketing\" falls under \"business\", \"behavior\" falls under \"psychology\")\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "{\n",
+        "  'race': ('race', 'racial', 'racism', 'racist', 'ethnicity', 'ethnic')\n",
+        "\n",
+        "  'psychology': ('psychology', 'psychologial', 'behavior')\n",
+        "\n",
+        "  'popular culture'\n",
+        "\n",
+        "  ''\n",
+        "\n",
+        " }\n"
       ]
     }
   ]
